clusters/cosmos/apps/filebrowser/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: filebrowser-ingress
spec:
 tls:
 - hosts:
   - filebrowser.cosmos.cboxlab.com
   secretName: filebrowser-tls-secret
 rules:
 - host: filebrowser.cosmos.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: filebrowser
           port:
             number: 80
       path: /
       pathType: Prefix
